--- a/package.json
+++ b/package.json
@@ -3,11 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "ass-stringify": "^0.1.3",
+    "audio": "^1.2.0",
     "axios": "^0.18.0",
+    "ciseaux": "^0.4.0",
     "classnames": "^2.2.6",
+    "fluent-ffmpeg": "^2.1.2",
     "fullcalendar-reactwrapper": "^1.0.7",
+    "lil-uuid": "^0.1.1",
+    "lodash.merge": "^4.6.1",
     "react": "^16.4.1",
     "react-beautiful-dnd": "^6.0.0",
+    "react-circular-progressbar": "^1.0.0",
     "react-credit-card-input": "^1.1.0",
     "react-credit-cards": "^0.7.0",
     "react-currency-input": "^1.3.6",
