--- a/package.json
+++ b/package.json
@@ -5,21 +5,24 @@
   "dependencies": {
     "ass-stringify": "^0.1.3",
     "audio": "^1.2.0",
+    "audiobuffer-to-wav": "^1.0.0",
     "axios": "^0.18.0",
+    "bootstrap": "^4.3.1",
     "ciseaux": "^0.4.0",
     "classnames": "^2.2.6",
-    "fluent-ffmpeg": "^2.1.2",
     "fullcalendar-reactwrapper": "^1.0.7",
     "lil-uuid": "^0.1.1",
     "lodash.merge": "^4.6.1",
     "react": "^16.4.1",
     "react-beautiful-dnd": "^6.0.0",
+    "react-bootstrap": "^1.0.0-beta.6",
     "react-circular-progressbar": "^1.0.0",
     "react-credit-card-input": "^1.1.0",
     "react-credit-cards": "^0.7.0",
     "react-currency-input": "^1.3.6",
     "react-dom": "^16.2.0",
     "react-grid-system": "^3.1.0",
+    "react-input-range": "^1.3.0",
     "react-notifications": "^1.4.3",
     "react-notify-toast": "^0.4.0",
     "react-router-dom": "^4.2.2",
@@ -29,7 +32,8 @@
     "react-share": "^2.4.0",
     "react-soundplayer": "^1.0.4",
     "react-stripe-elements": "^2.0.3",
-    "styled-components": "^3.2.2"
+    "styled-components": "^3.2.2",
+    "wavesurfer.js": "^2.2.1"
   },
   "scripts": {
     "start": "react-scripts start",
