--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
     "react-credit-cards": "^0.7.0",
     "react-currency-input": "^1.3.6",
     "react-dom": "^16.2.0",
+    "react-grid-layout": "^0.16.6",
     "react-grid-system": "^3.1.0",
     "react-input-range": "^1.3.0",
     "react-notifications": "^1.4.3",
     "react-notify-toast": "^0.4.0",
+    "react-player": "^1.10.0",
     "react-router-dom": "^4.2.2",
     "react-s3": "^1.3.1",
     "react-scheduler-smartdata": "^0.7.28",
@@ -33,6 +35,7 @@
     "react-soundplayer": "^1.0.4",
     "react-stripe-elements": "^2.0.3",
     "styled-components": "^3.2.2",
+    "vis": "^4.21.0",
     "wavesurfer.js": "^2.2.1"
   },
   "scripts": {
