--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-grid-layout": "^0.16.6",
     "react-grid-system": "^3.1.0",
     "react-input-range": "^1.3.0",
+    "react-kawaii": "^0.11.0",
     "react-notifications": "^1.4.3",
     "react-notify-toast": "^0.4.0",
     "react-player": "^1.10.0",
@@ -34,6 +35,7 @@
     "react-share": "^2.4.0",
     "react-soundplayer": "^1.0.4",
     "react-stripe-elements": "^2.0.3",
+    "react-tooltip": "^3.10.0",
     "styled-components": "^3.2.2",
     "vis": "^4.21.0",
     "wavesurfer.js": "^2.2.1"
