--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
     "react-soundplayer": "^1.0.4",
     "react-stripe-elements": "^2.0.3",
     "react-tooltip": "^3.10.0",
+    "react-twitter-auth": "0.0.13",
+    "react-video-thumbnail": "^0.1.3",
     "styled-components": "^3.2.2",
     "vis": "^4.21.0",
     "wavesurfer.js": "^2.2.1"
