--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-beautiful-dnd": "^6.0.0",
     "react-bootstrap": "^1.0.0-beta.6",
     "react-circular-progressbar": "^1.0.0",
+    "react-compound-slider": "^2.2.0",
     "react-credit-card-input": "^1.1.0",
     "react-credit-cards": "^0.7.0",
     "react-currency-input": "^1.3.6",
