--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "fullcalendar-reactwrapper": "^1.0.7",
     "lil-uuid": "^0.1.1",
     "lodash.merge": "^4.6.1",
-    "query-string": "^6.8.3",
+    "query-string": "^5.1.1",
     "react": "^16.4.1",
     "react-beautiful-dnd": "^6.0.0",
     "react-bootstrap": "^1.0.0-beta.6",
@@ -26,6 +26,7 @@
     "react-dom": "^16.2.0",
     "react-grid-layout": "^0.16.6",
     "react-grid-system": "^3.1.0",
+    "react-helmet": "^5.2.1",
     "react-infinite-scroller": "^1.2.4",
     "react-input-range": "^1.3.0",
     "react-kawaii": "^0.11.0",
